--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -16,10 +16,10 @@
 .btn-sm {
   margin-left: 330px;
 }
-.form-container {
+/* .form-container {
   width: 40%;
   border-radius: 10px;
-}
+} */
 form {
   background-color: white;
   margin: 20px;
