--- a/src/components/Shop/Shop.css
+++ b/src/components/Shop/Shop.css
@@ -3,3 +3,11 @@
   grid-template-columns: 3fr 1fr;
   width: 100%;
 }
+.pagination button {
+  margin: 20px 15px;
+  padding: 0 15px;
+}
+.pagination .selected {
+  background-color: blue;
+  color: white;
+}
